static/css/global.css
@font-face {
    font-family: "Roboto";
    src: url(../fonts/Roboto-Light.ttf);
    font-weight: 100;
}

@font-face {
    font-family: "Roboto";
    src: url(../fonts/Roboto-Medium.ttf);
    font-weight: 400;
}

@font-face {
    font-family: "Roboto";
    src: url(../fonts/Roboto-Bold.ttf);
    font-weight: 700;
}

:root {
    --prim: #f0f0f0;
    --prim-shadow: #d0d0d0;
    --prim-shadow-sec: #808080;
    --sec: #404040;
    --good-green: #99ef99;
    --good-green-shadow: #77dd77;
    --bad-red: #ef9999;
    --bad-red-shadow: #dd7777;
    --info-blue: #9999ef;
    --info-blue-shadow: #7777dd;
}

* {
    margin: 0;
    padding: 0;
    font-family: "Roboto";
    color: var(--sec);
    background-color: var(--prim);
}

body {
    width: 100vw;
    height: 100vh;
}

input {
    margin: 0.5em;
    padding: 0.5em;
    outline: 1px solid var(--prim-shadow-sec);
    border: none;
    border-radius: 0.5em;
}

.flex {
    display: flex;
    flex-wrap: wrap;
}

.nowrap {
    flex-wrap: nowrap;
}

.slid {
    justify-content: flex-start;
    align-items: center;
}

.centered {
    justify-content: center;
    align-items: center;
}

.spaced {
    justify-content: space-evenly;
    align-items: center;
}

.between {
    justify-content: space-between;
    align-items: center;
}

.row {
    flex-direction: row;
}

.column {
    flex-direction: column;
}

.good {
    background-color: var(--good-green);
    border: 1px solid var(--good-green-shadow);
}

.bad {
    background-color: var(--bad-red);
    border: 1px solid var(--bad-red-shadow);
}

.info {
    background-color: var(--info-blue);
    border: 1px solid var(--info-blue-shadow);
}

.outset {
    transform: translateY(-1vh);
    outline: 1px solid var(--prim-shadow);
    box-shadow: 0 1vh 0 0 var(--prim-shadow), 0 1vh 5px 2px var(--prim-shadow-sec);
}

.inset {
    transform: translateY(-0.5vh);
    outline: 1px solid var(--prim-shadow);
    box-shadow: 0 0.5vh 0 0 var(--prim-shadow) inset, 0 0.5vh 5px 2px var(--prim-shadow-sec) inset;
}

button {
    margin: 0.25em;
    padding: 0.25em;
    border-radius: 0.25em;
}

.fas,
.far,
.fab {
    background-color: inherit;
}

@keyframes fade-in {
    from {
        opacity: 0%;
        transform: translateY(0.25em);
    }

    to {
        opacity: 100%;
        transform: translateY(0);
    }
}

@keyframes button-in-good {
    from {
        opacity: 0%;
        transform: translateY(0.5em);
        box-shadow: 0 0 0 0 var(--good-green-shadow), 0 0 0 0 var(--prim-shadow-sec);
    }

    50% {
        opacity: 100%;
        transform: translateY(0.25em);
        box-shadow: 0 0 0 0 var(--good-green-shadow), 0 0 0 0 var(--prim-shadow-sec);
    }

    to {
        
    }
}

@keyframes button-in-bad {
    from {
        opacity: 0%;
        transform: translateY(0.5em);
        box-shadow: 0 0 0 0 var(--bad-red-shadow), 0 0 0 0 var(--prim-shadow-sec);
    }

    50% {
        opacity: 100%;
        transform: translateY(0.25em);
        box-shadow: 0 0 0 0 var(--bad-red-shadow), 0 0 0 0 var(--prim-shadow-sec);
    }

    to {
        
    }
}

@keyframes button-in-info {
    from {
        opacity: 0%;
        transform: translateY(0.5em);
        box-shadow: 0 0 0 0 var(--info-blue-shadow), 0 0 0 0 var(--prim-shadow-sec);
    }

    50% {
        opacity: 100%;
        transform: translateY(0.25em);
        box-shadow: 0 0 0 0 var(--info-blue-shadow), 0 0 0 0 var(--prim-shadow-sec);
    }

    to {
        
    }
}

button.fancy {
    will-change: transform, opacity, box-shadow;
    font-size: 4vw;
    transition-duration: 0.2s;
    transform: translateY(0em);
    opacity: 0;
}

button.good {
    box-shadow: 0 0.25em 0 0 var(--good-green-shadow), 0 0.25em 10px 2px var(--prim-shadow-sec);
}

button.bad {
    box-shadow: 0 0.25em 0 0 var(--bad-red-shadow), 0 0.25em 10px 2px var(--prim-shadow-sec);
}

button.info {
    box-shadow: 0 0.25em 0 0 var(--info-blue-shadow), 0 0.25em 10px 2px var(--prim-shadow-sec);
}

button.good:hover {
    transform: translateY(0.05em);
    box-shadow: 0 0.2em 0 0 var(--good-green-shadow), 0 0.2em 8px 1.6px var(--prim-shadow-sec);
}

button.good:active {
    transform: translateY(0.25em);
    box-shadow: 0 0 0 0 var(--good-green-shadow), 0 0 0 0 var(--prim-shadow-sec);
}

button.bad:hover {
    transform: translateY(0.05em);
    box-shadow: 0 0.2em 0 0 var(--bad-red-shadow), 0 0.2em 8px 1.6px var(--prim-shadow-sec);
}

button.bad:active {
    transform: translateY(0.25em);
    box-shadow: 0 0 0 0 var(--info-red-shadow), 0 0 0 0 var(--prim-shadow-sec);
}

button.info:hover {
    transform: translateY(0.05em);
    box-shadow: 0 0.2em 0 0 var(--info-blue-shadow), 0 0.2em 8px 1.6px var(--prim-shadow-sec);
}

button.info:active {
    transform: translateY(0.25em);
    box-shadow: 0 0 0 0 var(--info-blue-shadow), 0 0 0 0 var(--prim-shadow-sec);
}

